--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h2>This is heading 2</h2>
 		<h3>This is heading 3</h3>
 		<h3> new test changes again</h3>
+		<h3> new test changes again</h3>
 
 		<p>This is <strong>a</strong> paragraph.</p>
 		<p>I like eating </p>
