--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<body>
 		<h1>This is a Heading</h1>
 		<h1>This is heading 1</h1>
-		<h2>This is heading 2</h2>
-		<h3>This is heading 3</h3>
-		<h3> new test changes again</h3>
-		<h3> new test changes again</h3>
+		<h2 id="blue1">This is heading 2</h2>
+		<h3 id="green1">This is heading 3</h3>
+		<h3 class="redtext"> new test changes again</h3>
+		<h3 class="redtext"> new test changes again</h3>
 
 		<p>This is <strong>a</strong> paragraph.</p>
 		<p>I like eating </p>
