--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 	<body>
 		<h1>Kush Forums</h1>
-		<h2>This is heading 1</h1>
-		<h2 id="blue1">This is heading 2</h2>
-		<h3 id="green1">This is heading 3</h3>
-		<h3 class="redtext"> new test changes again</h3>
-		<h3 class="redtext"> new test changes again</h3>
+		<h2>Create Post</h1>
+		<h2 id="mainpostname">"Post Name Placeholder"</h2>
+		<h3 id="postcontents">"Post Contents Placeholder"</h3>
+		<h3 class="comments">"Other Comments</h3>
+		<h3 class="comments">"Other Comments</h3>
 
-		<p>This is <strong>a</strong> paragraph.</p>
-		<p>I like eating </p>
+		<p>This is <strong>a</strong> paragraph. Testing</p>
+		<p>List Testing </p>
 		<ul>
 			<li>apples</li>
 			<li>oranges</li>
