changed body, added borders, changed colors

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 	<body>
 		<h1>Kush Forums</h1>
-		<h2>Create Post</h1>
+		<h2 id="creation">Create Post</h2>
 		<h2 id="mainpostname">"Post Name Placeholder"</h2>
 		<h3 id="postcontents">"Post Contents Placeholder"</h3>
-		<h3 class="comments">"Other Comments</h3>
-		<h3 class="comments">"Other Comments</h3>
+		<h3 class="comments">"Other Comments"</h3>
+		<h3 class="comments">"Other Comments"</h3>
 
 		<p>This is <strong>a</strong> paragraph. Testing</p>
 		<p>List Testing </p>
