--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</ul>
 		<img src="images/car.jpg" alt="My test image" width="104" height="142">
 		<img src="./dog.jpg" alt="My test image" width="104" height="142">
-		<a href="https://i2-prod.mirror.co.uk/incoming/article25609246.ece/ALTERNATES/s1200d/0_PUSS-IN-BOOTS.jpg">Click if you dare</a>
+		<p><a href="https://i2-prod.mirror.co.uk/incoming/article25609246.ece/ALTERNATES/s1200d/0_PUSS-IN-BOOTS.jpg">Click if you dare</a></p>
 
 	</body>
 
