--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<img src="./dog.jpg" alt="My test image" width="104" height="142">
 		<p><a href="https://i2-prod.mirror.co.uk/incoming/article25609246.ece/ALTERNATES/s1200d/0_PUSS-IN-BOOTS.jpg">Click if you dare</a></p>
 
+		<button>Change user</button>
+		<script src="scripts/main.js"></script>
+
 	</body>
 
 </html>
